[package]
name = "warcli"
version = "0.1.0"
authors = ["staticgc <75370339+staticgc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
warlock = {path="../warlock"}
keyvalue = {path="../keyvalue"}