[package]
name = "warlock"
version = "0.1.0"
authors = ["staticgc <75370339+staticgc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyvalue = {path = "../keyvalue"}
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
parking_lot = "0.11"